[SPARC] Consolidate compareBranch into SPARCMacroAssembler